--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,7 @@
 
 # Audio formats:
 *.mp3 filter=lfs diff=lfs merge=lfs -text
+*.ogg filter=lfs diff=lfs merge=lfs -text
 *.wav filter=lfs diff=lfs merge=lfs -text
 *.aiff filter=lfs diff=lfs merge=lfs -text
 
