--- a/.gitattributes
+++ b/.gitattributes
@@ -22,4 +22,4 @@
 
 # Other binary formats
 *.dll filter=lfs diff=lfs merge=lfs -text
-*.ShaderLab linguist-detectable=false
+*.shader linguist-detectable=false
